# llm-exception-recorder

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  ruff.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
cli/: main.py
docs/: API.md  ARCHITECTURE.md  CONFIG.md  USAGE.md  WORKFLOW.md
src/: analyzer.py  scanner.py
src/llm_exception_recorder/: __init__.py  classifiers.py  models.py  recorder.py  reporters.py  storage.py
tests/: test_recorder.py
