[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-exception-recorder"
version = "1.0.0"
description = "📚 LLM 异常自动收录规范文档"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["openai>=1.0.0", "click>=8.1.0", "rich>=13.0.0",
                "pydantic>=2.0.0", "python-dotenv>=1.0.0", "httpx>=0.25.0"]

[project.scripts]
llm-err = "cli.main:cli"
